--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="main.js"></script>
-</body>
-</html>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Document</title> 
+</head> 
+<div id="main" style="display: flex; flex-direction: column; width: 400px;"> 
+<label>Enter guests number from 1 to 8</label> 
+<input type="text" id="guestsnumber"> 
+ 
+ 
+</div> 
+<button id="bottom" style="margin-top: 30px;">Sign in</button> 
+    <script src="./nem.js"></script> 
+</body> 
+</html
